# Tieh

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/tie/: __init__.py
src/tie/static/: styles.css
src/tie/templates/: received.html  send.html
src/tieh/: __init__.py
src/tieh/static/: styles.css
src/tieh/templates/: index.html  received.html  send.html  uploads.html
